...
                    Colors.purple, 'home1'),
                SizedBox(
                  height: 20,
                ),
                twoLesson(
                    lesson('assets/images/easter-egg-blocked.jpg', 'Cơ bản 2',
                        Colors.grey[400], 'home2'),
                    lesson('assets/images/easter-egg-blocked.jpg', 'Cơ bản 3',
                        Colors.grey[400], 'home3')),
                SizedBox(
                  height: 20,
                ),
                lesson('assets/images/easter-egg-blocked.jpg', 'Cơ bản 4',
...
                  lesson('assets/images/easter-egg-blocked.jpg', 'Cơ bản 6',
                      Colors.grey[400], 'home6'),
                ),
                SizedBox(
                  height: 20,
                ),
                lesson('assets/images/easter-egg-blocked.jpg', 'Về đích',
                    Colors.grey[400], 'home7'),
                SizedBox(
                  height: 20,
                ),
                // Divider(
                //   thickness: 2,
...
