...
    );
  }

  Widget answer(String image, var number) {
    if (number == 1) {
      return GestureDetector(
        key: const ValueKey("image1"),
        onTap: () {
          setState(() {
            if (lastChecked != 0) {
              isChecked[lastChecked - 1] = false;
            }
            isTapped = true;
...
